# rustpassman

./: Cargo.toml  superkek
src/: main.rs
