[package]
name = "rust-1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"]}
serde_json = "1.0"
tindercrypt = "0.3.2"
structopt = "0.3.22"
home = "0.5.3"
cli-table = "0.4.6"